8259643: ZGC can return metaspace OOM prematurely