src/hotspot/share/memory/metaspace.cpp
@@ -30,6 +30,7 @@
 #include "memory/filemap.hpp"
 #include "memory/classLoaderMetaspace.hpp"
 #include "memory/metaspace.hpp"
+#include "memory/metaspaceCriticalAllocation.hpp"
 #include "memory/metaspace/chunkHeaderPool.hpp"
 #include "memory/metaspace/chunkManager.hpp"
 #include "memory/metaspace/commitLimiter.hpp"
@@ -800,6 +801,9 @@ MetaWord* Metaspace::allocate(ClassLoaderData* loader_data, size_t word_size,
   assert(loader_data != NULL, "Should never pass around a NULL loader_data. "
         "ClassLoaderData::the_null_class_loader_data() should have been used.");
 
+  // Deal with concurrent unloading failed allocation starvation
+  MetaspaceCriticalAllocation::block_if_concurrent_purge();
+
   MetadataType mdtype = (type == MetaspaceObj::ClassType) ? ClassType : NonClassType;
 
   // Try to allocate metadata.
@@ -902,6 +906,10 @@ const char* Metaspace::metadata_type_name(Metaspace::MetadataType mdtype) {
 }
 
 void Metaspace::purge() {
+  // The MetaspaceCritical_lock is used by a concurrent GC to block out concurrent metaspace
+  // allocations, that would starve critical metaspace allocations, that are about to throw
+  // OOM if they fail; they need precedence for correctness.
+  MutexLocker ml(MetaspaceCritical_lock);
   ChunkManager* cm = ChunkManager::chunkmanager_nonclass();
   if (cm != NULL) {
     cm->purge();
@@ -912,6 +920,8 @@ void Metaspace::purge() {
       cm->purge();
     }
   }
+
+  MetaspaceCriticalAllocation::satisfy();
 }
 
 bool Metaspace::contains(const void* ptr) {
